--- a/public/css/article.css
+++ b/public/css/article.css
@@ -6,6 +6,7 @@
 **/
 .page{
     width: 100%;
+    background-color: aliceblue;
 }
 .warp_mid{
     display: flex;
@@ -48,6 +49,8 @@
     padding-bottom: 10px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    align-content: center;
     font-size: 2px;
 }
 .err_show_box{
@@ -83,4 +86,45 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+}
+
+/**评论区**/
+
+.warp_comments{
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #d4d4d4;
+}
+.comments_item{
+    width: 70%;
+}
+.text-right{
+    margin-top: 5px;
+}
+
+.show_comments{
+    border-top: 1px solid #bbbbbb;
+    padding: 2px;
+    width: 70%;
+    margin-top: 20px;
+}
+
+.reply_item{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.comment_item{
+    border-left: 1px solid #1e1f23;
+    text-indent: 5px;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
+.comment_content{
+    padding: 10px;
 }
