--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,67 +5,102 @@
 **/
 
 body{
-    background: #DFE9FB;
+    width: 100%;
+    background-image: url("/images/login_bg.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: initial;
+    background-size: cover;
 }
+
 page{
     width: 100%;
     height:inherit;
-    background: #2a88bd;
 }
+
 .panel{
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    background-clip: padding-box;
-    margin: 160px auto;
-    width: 350px;
-    padding: 35px 35px 15px 35px;
-    background: #fff;
-    border: 1px solid #eaeaea;
-    box-shadow: 0 0 25px #cac6c6;
-
-    background: -ms-linear-gradient(top,#ace,#00C1DE);/*IE 10*/
-    background: -moz-linear-gradient(top,#ace,#00C1DE);/*谷歌*/
-    background: -webkit-gradient(linear,0% 0%,0% 100%,from(#ace),to(#00C1DE));/*谷歌*/
-    background: -moz-linear-gradient(top,#ace,#00C1DE);
-    background: -o-linear-gradient(top,#ace,#00C1DE);
-}
-.panel-heading{
-    margin: 0px auto 40px auto;
+    display: block;
+    overflow: hidden !important;
+    z-index: 100;
     text-align: center;
-    color: #505458;
+    position: relative;
+    margin-top: 10%;
+    width: 32%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(0,0,0,0.08);
 }
-.panel-body {
-     padding: unset;
+.form-group{
+    margin: unset;
+    display: flex;
+    justify-content: center;
+    font-family: 微软雅黑;
 }
 
-#remember{ margin: 0px 0px 35px 0px;}
-
-.btn-primary{
+.account_item ,.password_item{
+    background: rgba(255 255 255 0.15);
+    /*border: 1px solid #FFF;*/
+    border-radius: 3px;
+    margin-top: 10px;
+    height: 52px;
     width: 100%;
 }
 
-@media (min-width: 768px){
-    .form-horizontal .control-label {
-        text-align: center;
-        margin-bottom: 0;
-        padding-top: 7px;
-    }
+.login_btn_item{
+    width: 100%;
+    position: relative;
+    min-height: 1px;
+    padding: 15px;
+}
+.btn-primary{
+    background: #00aeff;
+    width: 100%;
 }
 
-@media (min-width: 992px){
-    .col-md-6 {
-        width: 60%;
-    }
+.bottom_controll{
+    width: 100%;
+    position: relative;
+    min-height: 1px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.login_pitch{
+    width: 100%;
+    display: flex;
+    line-height: 20px;
+    font-size: 14px;
+    color: #FFF;
+    text-align: center;
+    padding-left: 15px;
+    margin: unset;
+    font-weight: unset;
+    align-content: center;
+    align-items: center;
+}
+.f1{
+    float: left;
 }
 
-@media (min-width: 992px){
-    .col-md-4 {
-        width: 30%;
-    }
+.login_pitch input[type="checkbox"]{
+    /*-webkit-appearance: none;*/
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    display: block;
+    outline: none;
+    border: 1px solid #FFF;
+    border-radius: 2px;
+    overflow: hidden;
+    text-align: center;
+    margin: unset;
 }
-@media (min-width: 992px){
-    .col-md-offset-4 {
-        margin-left: 30%;
-    }
+.right_control{
+    width: 50%;
+    font-size: 14px;
+    line-height: 20px;
+    color: #b4b4b4;
+    text-align: right;
 }
+
