--- a/public/css/article.css
+++ b/public/css/article.css
@@ -18,6 +18,12 @@
     display: flex;
     justify-content: center;
 }
+img{
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
 .show_box{
     width: 60%;
     display:flex;
