--- a/public/css/register.css
+++ b/public/css/register.css
@@ -3,3 +3,28 @@
 /**
     注册页面样式
 **/
+
+.name_item,.nickname_item,.email_item{
+    background: rgba(255 255 255 0.15);
+    /*border: 1px solid #FFF;*/
+    border-radius: 3px;
+    margin-top: 10px;
+    height: 42px;
+    width: 100%;
+}
+
+.form-horizontal{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.panel-body {
+    padding: 15px;
+}
+.panel-heading {
+    padding: unset;
+}
+.login_btn_item {
+    padding: 15px;
+}
+
