--- a/public/css/article.css
+++ b/public/css/article.css
@@ -100,6 +100,12 @@ img{
 }
 /**评论区**/
 
+.line{
+    width: 100%;
+    margin-top: 20px;
+    border-bottom: 1px dashed  #cccccc;
+}
+
 .warp_comments{
     width: 100%;
     margin-top: 20px;
@@ -107,7 +113,7 @@ img{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #d4d4d4;
+    /*background-color: #d4d4d4;*/
 }
 .comments_item{
     width: 70%;
