--- a/public/css/classificationlist.css
+++ b/public/css/classificationlist.css
@@ -1,115 +1,62 @@
 .row{
     width: 100%;
 }
-
-.show_box{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    /*width: 80%;*/
+.tm-blog-post{
+    text-align: left;
 }
-.warp-classification{
-    padding: 10px;
+.tm-blog-post > .tm-gold-text{
+    color: #cc9900;
+    padding-left: 50px;
+}
+.tm-blog-post > h3{
+    font-size: 1.65rem;
+    margin-bottom: .5rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+    margin-top: 0;
+    display: block;
+}
+.tm-aside-r{
+    padding-left: 30px;
+}
+@media screen and(min-width: 992px){
+    .col-lg-3{
+        width: 25%;
+    }
+}
+.tm-title{
+    margin-bottom: 1rem;
+    line-height: 1.4;
+}
+.tm-gold-text{
+    color: #cc9900;
 }
 
-
-/*主体样式*/
-.row .is-flex{
-    display: flex;
-    flex-wrap: wrap;
+.tm-gold-text > h3{
+    font-size: 1.65rem;
+    margin-bottom: .5rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+    margin-top: 0;
+    display: block;
 }
-.row{
-    margin-right: -15px;
-    margin-left: -15px;
+.tm-margin-t-small{
+    margin-top: 30px;
 }
-
-
-.post-card{
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
-    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.15);
+hr{
+    border-top: 1px solid #CCCCCC;
+    margin-bottom: 1rem;
+    border: 0;
+    height: 0;
+    display: block;
+    unicode-bidi: isolate;
+    -webkit-margin-before: 0.5em;
+    -webkit-margin-after: 0.5em;
+    -webkit-margin-start: auto;
+    -webkit-margin-end: auto;
     overflow: hidden;
-    margin-bottom: 40px;
-    transition: tranform 0.2s;
-}
-a{
-    /*color: #19ddc4;*/
-    transition: all 0.2s;
-    text-decoration: none;
-    background-color: transparent;
-}
-.post-card .featured-image{
-    height: 224px;
-    background-size: cover;
-    background-position: center;
-    transition: all 0.3s;
-}
-.post-card .featured-image img{
-    height:100%;
-    background-size: cover;
-    background-position: center;
-    transition: all 0.3s;
-}
-.post-card .content-warp{
-    padding: 0px 16px;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-}
-
-.post-card .entry-header{
-    margin: 24px 0px;
-    flex: 1;
-}
-.align-center{
-    text-align: center;
-}
-
-.post-card .entry-header .category{
-    position: relative;
-}
-
-.post-card .entry-header .category:before{
-    left: -24px;
-}
-
-.post-card .entry-header .category:after{
-    right: -24px;
-}
-
-.post-card .entry-header .category:before, .post-card .entry-header .category:after{
-    content: "";
-    height: 1px;
-    width: 16px;
-    background: rgba(153,153,153,0.5);
-    position: absolute;
-    top: 50%;
-    margin-top: -1px;
-}
-:after , :before{
-    box-sizing: border-box;
-}
-
-.post-card .entry-header .title{
-    margin-top: 12px;
-    margin-bottom: 0;
-}
-h4, .h4{
-    font-size: 1.8rem;
-    line-height: 2.8rem;
-}
-h2{
-    color: #222222;
-    font-weight: 600;
-}
-
-.post-card .entry-footer{
-    border-top: 1px solid rgba(204,204,204,0.3);
-    padding: 16px 0px;
-    font-size: 12px;
-    color: #999999;
-    display: flex;
-    flex-wrap: wrap;
 }
